Fix display overflow

--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@ main {
   cursor:default;
   border-radius: 8px;
   font-size: 1.2rem;
-  background-color: #2e2e2e
+  background-color: #2e2e2e;
+  overflow: hidden;
 }
 
 .display:hover {
